--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -302,8 +302,9 @@ a:focus {
 
 /* Column title */
 .column-title {
-  text-align: center;
-  margin: 0 0 40px;
+  /* text-align: center; */
+  text-align: left;
+  /* margin: 0 0 40px; */
 }
 
 .column-title-small {
@@ -2840,14 +2841,14 @@ img.testimonial-thumb {
 
 .ts-team-wrapper .ts-team-content {
   position: absolute;
-  top: 76%;
+  top: 55%;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 15px 25px;
   margin-top: 0;
   color: #fff;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.9);
   transition: 350ms;
 }
 
