--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -675,7 +675,8 @@ ul.top-info li p.info-text {
 
 .header-one,
 .header-one .site-navigation {
-  background: #000;
+  /* background: #000; */
+  background: #611f1f;
 }
 
 .header-one .navbar-collapse {
@@ -737,7 +738,8 @@ ul.navbar-nav>li>a {
 
 ul.navbar-nav>li:hover>a,
 ul.navbar-nav>li.active>a {
-  color: #611f1f !important;
+  color: #fff !important;
+  border-bottom: 4px #fff solid;
 }
 
 /*-- Logo --*/
@@ -1065,7 +1067,7 @@ ul.navbar-nav>li>a {
   padding: 15px 0;
   letter-spacing: .3px;
   border-bottom: 1px solid #e5e5e5;
-  color: #333333;
+  color: #000;
 }
 
 @media (max-width: 991px) {
@@ -2453,8 +2455,8 @@ img.testimonial-thumb {
 ================================================== */
 /*- Footer common */
 .footer {
-  background-color: #0d0d0d;
-  color: #999;
+  background-color: #611f1f;
+  color: #fff;
 }
 
 .footer-main {
@@ -2523,12 +2525,18 @@ img.testimonial-thumb {
 
 .footer-widget ul.list-arrow li a,
 .footer-widget ul.list-arrow li:before {
-  color: #747474;
+  color: #fff;
 }
 
 .footer-widget ul.list-arrow li:hover a,
 .footer-widget ul.list-arrow li:hover {
-  color: #611f1f;
+  color: #fff;
+  /* border-bottom: 4px #fff solid; */
+}
+
+.footer-widget ul.list-arrow li:hover {
+  /* color: #fff; */
+  border-bottom: 4px #fff solid;
 }
 
 .working-hours {
