tambah menu article di dashboard

--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -2549,7 +2549,7 @@ img.testimonial-thumb {
 /*-- Copyright --*/
 .copyright {
   background: #611f1f;
-  color: #111;
+  color: #fff;
   padding: 25px 0;
   position: relative;
   z-index: 1;
