--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -2228,7 +2228,7 @@ ul.navbar-nav>li.header-get-a-quote:hover>a:after {
   margin: 0 0 10px;
   display: inline-block;
   padding: 0 40px 30px 60px;
-  background-color: #fff;
+  /* background-color: #fff; */
   position: relative;
   font-size: 16px;
   font-style: italic;
